@@ -39,7 +39,7 @@
 
 // NOTE: wcstoll has been derived from strtoll
 
-#if __SDCC_LONGLONG
+#ifdef __SDCC_LONGLONG
 long long int wcstoll(const wchar_t *restrict nptr, wchar_t **restrict endptr, int base)
 {
   const wchar_t *ptr = nptr;
